# reactivated

./: .eslintignore  .flake8  .gitignore  .isort.cfg  CLAUDE.md  CONTRIBUTING.md  DESIGN.txt  LICENSE  README.md  RFC.md  app.tsx  db.sqlite3  exports.tsx  fabfile.py  help.html  heroku.yml  index.html  index.tsx  models.tsx  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  query.sql  requirements.in  requirements.nix  requirements.txt  setup.py  setup.sh  shell.nix  sitemap.xml  tests.tsx  tsconfig.json  tslint.json  users.html  webpack.config.ts
.github/: .kodiak.toml
.github/workflows/: cd.yaml  ci.yaml  cla.yaml  pull_request.yaml
client/: app.tsx  models.tsx
client/components/: Form.tsx  Widget.tsx
client/templates/: DetailView.tsx  FormView.tsx  TrinketDetail.tsx  TrinketList.tsx
components/: Form.tsx  Layout.tsx  Widget.tsx
containers/builder/: Dockerfile
containers/heroku/: Dockerfile
containers/sample/: Dockerfile
containers/server/: Dockerfile
css/: main.css
custom_user-stubs/: models.pyi
development/: .flake8  .gitignore  Dockerfile  eslint.config.js  eslint.config.ts  frozen_working.txt  manage.py  mypy.ini  package.json  pyproject.toml  requirements.txt  shell.nix  tsconfig.json
development/client/: forms.tsx  index.tsx  styles.css  styles.css.ts  styles.tsx
development/client/components/: Layout.tsx
development/client/templates/: DjangoDefault.tsx  EditPoll.tsx  FormPlayground.tsx  PollComments.tsx  PollDetail.tsx  PollsIndex.tsx  Results.tsx
development/scripts/: deploy.sh  fix.sh  launch.sh  remove_example.sh  test.sh
development/server/example/: forms.py  models.py  templates.py  tests.py  urls.py  views.py
development/server/example/migrations/: 0001_initial.py  0002_alter_question_question_text.py  0002_question_status.py  0002_question_status_and_more.py  0003_alter_choice_question.py  0004_alter_choice_choice_text.py  0005_comment.py
development/server/settings/: common.py
django-stubs/db/: models.pyi
django-stubs/forms/: fields.pyi  forms.pyi  widgets.pyi
django_react/: __init__.py  apps.py  template.py  views.py
django_react/conf/: tsconfig.json
docs/: codegen-transform.md  installation.html  installation.md  subtree.md  type-checkers.md  typing.html  typing.md
en/: help.html  index.html  users.html
experiments/: foo.py  mypy.ini  plugin.py  types.py
nix/: requirements.nix
patches/: react-markdown+8.0.7.patch
poc/: .gitignore  Page.tsx  build.client.js  build.js  build.server.js  client.tsx  index.tsx  package.json  server.js  server.tsx  tsconfig.json
poc/client/: index.tsx
poc/components/: Layout.tsx
poc/server/: asgi.py  forms.py  index.tsx  settings.py  templates.py  urls.py  views.py  wsgi.py
poc/templates/: Login.tsx  Page.tsx
reactivated/: __init__.py  apps.py  backend.py  checks.py  config.py  constants.py  constraints.py  context.py  context_processors.py  fields.py  forms.py  generation.py  middleware.py  models.py  other.py  pick.py  plugin.py  processes.py  registry.py  renderer.py  router.py  rpc.py  serialization.py  stubs.py  template.py  templates.py  templates2.py  transport.py  types.py  utils.py  views.py  widgets.py
reactivated.io/client/: styles.tsx
reactivated.io/scripts/: fix.sh  helpers.sh
reactivated.io/server/: asgi.py
reactivated/conf/: mypy.ini  tsconfig.json
reactivated/forms/: __init__.py  builtins.py  core.py  django.py  schema.py  widgets.py
reactivated/rpc/: __init__.py  context.py  core.py  errors.py  forms.py  legacy.py  observer.py  patches.py  template.py  utils.py
reactivated/serialization/: __init__.py  builtins.py  context_processors.py  registry.py  widgets.py
reactivated/templates/: autocomplete
reactivated/user/: admin.py  models.py
reactivated/views/: __init__.py  router.py
sample/: .babelrc.json  .gitignore  Dockerfile  app.json  manage.py  package.json  reactivated.config.tsx  renderer.tsx  requirements.txt  shell.nix  tsconfig.json  vite.config.mts  webpack.config.ts
sample/client/: App.tsx  Button.tsx  Layout.tsx  context.tsx  entry-client.tsx  entry-server.tsx  forms.tsx  index.tsx  (+4 more)
sample_reactivated_site/: urls.py
scripts/: build-create-django-app-docker.sh  build-python.sh  enums.sh  fix.sh  foo.sh  generate_types.py  helpers.sh  release.sh  script-create-django-app.sh  snapshot.sh  test.sh  to-be-renamed.py
server/: app.tsx  db.sqlite3  manage.py  requirements.txt  settings.py  urls.py
site/: .flake8  manage.py  package.json  requirements.txt  shell.nix  tsconfig.json  webpack.config.ts
templates/: FormView.tsx  TrinketDetail.tsx  TrinketList.tsx
testproject/: Dockerfile  package.json  requirements.txt
tests/: autocomplete.py  conftest.py  e2e.py  exports.py  fields.py  forms.py  generation.py  renderer.py  rpc.py  serialization.py  templates.py  transport.py  types.py  urls.py  utils.py  validation.py  views.py
typescript/: client.tsx  index.tsx  server.tsx  webpack.tsx
vite_test/: .babelrc.json  .eslintrc.json  .prettierrc  package.json  shell.nix  tailwind.config.js  vite.config.ts
website/: .eslintrc.json  .gitignore  .prettierrc  Dockerfile  eslint.config.ts  fly.toml  mypy.ini  package.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt  shell.nix  sidebars.json  siteConfig.js  tsconfig.json
website/client/: fonts.css  forms.tsx  index.tsx  oldStyles.tsx  styles.css  styles.css.tsx  styles.tsx
website/client/components/: Code.tsx  Layout.tsx
website/client/templates/: Documentation.tsx  HomePage.tsx
website/core/: Footer.js
website/pages/en/: index.js
website/scripts/: deploy.sh  launch.sh  setup_environment.sh  test.sh
website/server/: urls.py  wsgi.py
website/server/docs/: api.md  concepts.md  contributor-license-agreement.md  deploying.md  existing-projects.md  getting-started.md  philosophy-goals.md  rfc.md  styles.md  why-nix.md
website/server/documentation/: templates.py  urls.py  views.py
website/server/settings/: common.py
(+159 files in other folders)
