[project]
name = "reactivated"
version = "0.49.1"
description = "A statically typed framework to create Django sites with a React frontend."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Silvio Gutierrez", email = "silviogutierrez@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "requests-unixsocket2>=0.4.0",
    "mypy~=1.14",
    "django-stubs~=5.1",
    "simplejson>=3.16.0",
]

[dependency-groups]
dev = [
    "Django==5.1.3",
    "django-extensions==3.2.3",
    "django-stubs-ext==5.1.1",
    "djangorestframework==3.14.0",
    "flake8==7.1.1",
    "greenlet==3.1.1",
    "isort==5.13.2",
    "black==24.10.0",
    "autoflake==2.3.1",
    "jsonschema==3.1.1",
    "Jinja2==3.1.4",
    "playwright==1.48.0",
    "psycopg[binary]==3.2.3",
    "pytest==8.3.3",
    "pytest-base-url==2.1.0",
    "pytest-django==4.9.0",
    "pytest-mypy-plugins==3.1.2",
    "pytest-playwright==0.5.2",
    "python-slugify==8.0.4",
    "PyYAML==6.0.1",
    "syrupy==4.7.2",
    "types-PyYAML==6.0.12.20240724",
    "types-requests==2.32.0.20241016",
    "types-simplejson==3.19.0.20240801",
    "Werkzeug==3.0.1",
]

[tool.uv]
no-binary-package = ["greenlet"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reactivated*"]

[tool.setuptools.package-data]
reactivated = ["py.typed", "templates/**/*"]
