[project]
name = "reactivated"
version = "0.51.0"
description = "A statically typed framework to create Django sites with a React frontend."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Silvio Gutierrez", email = "silviogutierrez@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "requests-unixsocket2>=0.4.0",
    "mypy~=1.14",
    "django-stubs~=5.1",
    "simplejson>=3.16.0",
    "django-citext>=1.0.3",
    "pydantic>=2.10",
    "typing-extensions>=4.0",
    "asgiref>=3.7",
]

[dependency-groups]
dev = [
    "Django==5.1.3",
    "django-extensions==3.2.3",
    "django-stubs-ext==5.1.1",
    "djangorestframework==3.14.0",
    "greenlet==3.1.1",
    "ruff>=0.11",
    "jsonschema==3.1.1",
    "Jinja2==3.1.4",
    "playwright==1.48.0",
    "psycopg[binary]==3.2.3",
    "pytest==8.3.3",
    "pytest-base-url==2.1.0",
    "pytest-django==4.9.0",
    "pytest-mypy-plugins==3.1.2",
    "pytest-playwright-asyncio==0.7.2",
    "python-slugify==8.0.4",
    "PyYAML==6.0.1",
    "syrupy==4.7.2",
    "pytest-asyncio>=0.26",
    "pytest-mock>=3.12",
    "types-PyYAML==6.0.12.20240724",
    "types-requests==2.32.0.20241016",
    "types-simplejson==3.19.0.20240801",
    "Werkzeug==3.0.1",
]

[tool.uv]
no-binary-package = ["greenlet"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reactivated*"]

[tool.setuptools.package-data]
reactivated = ["py.typed", "templates/**/*"]

[tool.pytest.ini_options]
norecursedirs = [".venv", "node_modules"]
DJANGO_SETTINGS_MODULE = "sample.server.settings"
python_files = ["tests/*.py"]
addopts = "--mypy-ini-file=tests/mypy/mypy.ini --mypy-only-local-stub"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore:pyee.AsyncIOEventEmitter has been moved to the pyee.asyncio module.",
]

[tool.ruff.lint]
# Default rules plus import sorting; isort config below was inert without "I".
extend-select = ["I"]
ignore = [
    "E501",  # Line too long: formatter handles this.
    "F405",  # May be undefined from star import.
    "F403",  # Wildcard imports: mypy analyzes these.
    "E731",  # Do not assign a lambda.
    "F821",  # Undefined names: used in Pick literals.
    "E721",  # Type comparison: used in generic alias origin checks.
]

[tool.ruff.lint.isort]
known-first-party = ["reactivated"]
