[project]
name = "reactivated-development"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "Django==5.0.2",
    "psycopg[binary]==3.1.18",
    "flake8==7.0.0",
    "isort==5.13.2",
    "black==22.3.0",
    "autoflake==2.3.0",
    "pytest==8.0.1",
    "pytest-django==4.5.2",
    "gunicorn==22.0.0",
    "dj-database-url==0.5.0",
    "reactivated",
]

[tool.uv.sources]
reactivated = { path = "..", editable = true }

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
