[project]
name = "reactivated-development"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "Django==5.0.2",
    "psycopg[binary]==3.1.18",
    "ruff>=0.11",
    "pytest==8.0.1",
    "pytest-django==4.5.2",
    "gunicorn==22.0.0",
    "dj-database-url==0.5.0",
    "reactivated",
]

[tool.uv.sources]
reactivated = { path = "..", editable = true }

[tool.ruff.lint]
ignore = [
    "E501",  # Line too long: formatter handles this.
    "F403",  # Wildcard imports: mypy analyzes these.
    "F821",  # Undefined names: used in Pick literals.
]
